--- a/envs/conda/dev_env.yaml
+++ b/envs/conda/dev_env.yaml
@@ -1,11 +1,7 @@
-name: cubi_metadata
+name: dev_env
 dependencies:
   - Python=3.9.*
   - pip
-  - mamba=0.25.0
-  - pyyaml=6.0
-  - toml=0.10.2
-  - semver=2.13.0
-  - pylint=2.14.5
-  - isort=5.10.1
-  - black=22.6.0
+  - mamba=1.4.9
+  - nextflow=23.04.1
+  - nf-core=2.9
